# funding-service-design-assessment

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  build.py  create_app.py  dev-requirements.txt  manifest.yml  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  static_assets.py  tasks.py  test.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: combine-prs.yml  copilot.yml  copilot_deploy.yml  deploy.yml  environment.yml  govcloud.yml  package.yml  s3-zip.yaml  s3_zip.yml  tag-to-release.yml
app/: __init__.py  assets.py  auth.py  aws.py  config.py  create_app.py  error_handlers.py  static_assets.py
app/assess/: api.py  assess.py  data.py  display_value_mappings.py  features.py  helpers.py  question_parser_utils.py  routes.py  status.py  tag_routes.py  views.py
app/assess/auth/: validation.py
app/assess/forms/: assessment_form.py  comments_form.py  continue_application_form.py  flag_form.py  mark_qa_complete_form.py  rescore_form.py  resolve_flag_form.py  scores_and_justifications.py  tags.py
app/assess/models/: application.py  assessment_flow.py  assessor_field.py  assessor_task_list.py  comment.py  file_factory.py  flag.py  flag_teams.py  flag_v2.py  fund.py  fund_summary.py  question.py  question_field.py  round.py  score.py  score_justification.py  sub_criteria.py  (+4 more)
app/assess2/: data_handling.py  routes.py
app/default/: routes.py
app/pdf/: full_application.py  pdf_generator.py
app/templates/: 403.html  404.html  500.html  base.html  cookie_policy.html  footer.html  get_help.html  head.html  header.html  index.html  maintenance.html
config/: __init__.py  display_value_mappings.py  themes_mapping.py
config/envs/: default.py  dev.py  development.py  production.py  test.py  unit_test.py
copilot/fsd-assessment/: manifest.yml
docs/: run.md  setup.md
scripts/: README  download_files.py
tests/: conftest.py  route_testing_conf.py  test_accessibility.py  test_activity_trail.py  test_application_form.py  test_applicators_response.py  test_assessment.py  test_assignment.py  test_authorisation.py  test_aws.py  test_content.py  test_data.py  test_data_operations.py  test_deprecated_theme_mapper.py  test_download_files.py  test_export.py  test_file_factory.py  test_filters.py  test_flag_teams.py  test_full_application.py  test_helpers.py  test_initialisation.py  test_jinja_macros.py  test_location_data.py  test_lru_cache.py  test_maintenance.py  test_pdf_generator.py  test_round_status.py  test_round_summaries.py  test_routes.py  test_shared_helpers.py  test_tags.py  test_validation.py  utils.py
tests/api_data/: endpoint_data.json  example_application_answers.py  example_application_json_blob.py  example_get_full_application.py  example_tasklist_metadata.py  sub_crit_flow_data.py  test_data.py  theme_list_response_map.json
tests/deprecated/: dashboard_per_fund.py
tests/pdf/: test_pdf_template.html
(+313 files in other folders)
