[project]
name = "funding-service-design-assessment"
version = "0.1.1"
description = "The funding service design frontend for the DLUHC."
authors = ["Version One"]
license = "MIT License"

requires-python = ">=3.10, <3.11"
dependencies = [
    "babel>=2.16.0",
    "beautifulsoup4==4.12.2",
    "boto3>=1.35.7",
    "connexion>=3.1.0",
    "cssmin>=0.2.0",
    "email-validator>=2.2.0",
    "flask>=2.3.3",
    "flask-assets>=2.1.0",
    "flask-babel>=2.0.0",
    "flask-compress>=1.15",
    "flask-talisman==1.1.0",
    "flask-wtf>=1.2.1",
    "funding-service-design-utils>=2.0.51,<2.1.0",
    "govuk-frontend-jinja>=3.2.0",
    "jsmin>=3.0.1",
    "num2words>=0.5.13",
    "openapi-spec-validator>=0.7.1",
    "pyopenssl>=24.2.1",
    "pyscss>=1.4.0",
    "requests>=2.32.3",
    "swagger-ui-bundle>=1.1.0",
    "xhtml2pdf>=0.2.16",
]

[tool.isort]
profile = "black"
force_single_line = "true"

[tool.flake8]
max-line-length = 120
count = true

[tool.uv]

[dependency-groups]
dev = [
    "beautifulsoup4==4.12.2",
    "black>=24.8.0",
    "boto3>=1.35.7",
    "debugpy>=1.8.5",
    "deepdiff>=8.0.0",
    "flake8-pyproject>=1.2.3",
    "invoke>=2.2.0",
    "pip-tools>=6.13.0",
    "pre-commit~=4.0.0",
    "pytest>=8.3.2",
    "pytest-env>=1.1.3",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.14.0",
]
